--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="page">
         <header class="header">
             <div class="wrapper header__wrapper">
-                <a href="#" class="header__logo -link">
+                <a href="#" class="header__logo-link">
                     <img src="./assets/img/logo.png" alt="Краски KOVALI" class="logo header__logo">
                     <span class="header__logo-year">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
@@ -60,7 +60,7 @@
                     <a href="tel:+79999999999" class="tel-link header__tel-link">
                         +7 999 999-99-99
                     </a>
-                    <a href="#" class="btn header__btn">
+                    <a href="#" class="btn btn_icon header__btn">
                         <div class="btn__icon">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -76,8 +76,273 @@
                 </div>
             </div>
         </header>
+        <main class="main">
+            <section class="promo-section">
+                <div class="wrapper promo-section__wrapper">
+                    <h1 class="heading promo-section__heading">
+                        Покрытия для <span class="heading__highlight">тяжелого бизнеса</span>
+                    </h1>
+                    <p class="text promo-section__slogan">
+                        Производство покрытий для всех этапов защиты металла
+                    </p>
+                </div>
+                <div class="promo-section__video-wrapper">
+                    <video src="./assets/video/promo-video.mp4" autoplay muted loop
+                        class="promo-section__video"></video>
+                </div>
+            </section>
+            <section class="advantages-section">
+                <div class="wrapper advantages-section__wrapper">
+                    <ul class="advantages-section__list">
+                        <li class="advantages-section__list-item">
+                            <h3 class="advantages-section__list-item-heading">
+                                <span>Собственная</span> лаборатория
+                            </h3>
+                            <img src="./assets/img/advantages-img-1.png" alt="Собственная лаборатория"
+                                class="advantages-section__list-item-img">
+                        </li>
+                        <li class="advantages-section__list-item">
+                            <h3 class="advantages-section__list-item-heading">
+                                Консультации на <br> <span>каждом этапе работ</span>
+                            </h3>
+                            <img src="./assets/img/advantages-img-2.png" alt="Консультации на каждом этапе работ"
+                                class="advantages-section__list-item-img">
+                        </li>
+                        <li class="advantages-section__list-item">
+                            <h3 class="advantages-section__list-item-heading">
+                                Индвидуальный подбор <span>характеристик краски</span>
+                            </h3>
+                            <img src="./assets/img/advantages-img-3.png" alt="Индвидуальный подбор характеристик краски"
+                                class="advantages-section__list-item-img">
+                        </li>
+                        <li
+                            class="advantages-section__list-item advantages-section__list-item_count advantages-section__list-item_video">
+                            <h4 class="advantages-section__list-item-subheading">
+                                Работаем <span class="advantages-section__list-item-count">
+                                    15 лет
+                                </span>
+                            </h4>
+                            <video muted autoplay loop src="./assets/video/advantages-video.mp4"
+                                class="advantages-section__list-item-video">
+
+                            </video>
+                        </li>
+                        <li
+                            class="advantages-section__list-item advantages-section__list-item_count advantages-section__list-item_image advantages-section__list-item_image-black">
+                            <h4 class="advantages-section__list-item-subheading">
+                                Готовых видов покрытий <span class="advantages-section__list-item-count">
+                                    296
+                                </span>
+                            </h4>
+                            <img src="./assets/img/advantages-card-bg.png" alt=""
+                                class="advantages-section__list-item-bg advantages-section__list-item-bg_80">
+                        </li>
+                        <li
+                            class="advantages-section__list-item advantages-section__list-item_count advantages-section__list-item_image advantages-section__list-item_image-black">
+                            <h4 class="advantages-section__list-item-subheading">
+                                Клиентов по всей России <span class="advantages-section__list-item-count">
+                                    48
+                                </span>
+                            </h4>
+                            <img src="./assets/img/advantages-map.svg" alt="" class="advantages-section__list-item-bg">
+                        </li>
+
+                    </ul>
+                </div>
+            </section>
+            <section class="about-section">
+                <div class="wrapper about-section__wrapper">
+                    <h2 class="subheading about-section__heading">
+                        О компании
+                    </h2>
+                    <div class="about-section__text-content">
+                        <p>
+                            Фабрика Ковали — завод-производитель высококачественных <span>покрытий по металлу
+                                под брендом «KOVALI».</span> Наши решения
+                            предназначены для антикоррозионной защиты металлических изделий любых форм и размеров,
+                            требующих лучших декоративных
+                            свойств и длительного срока службы
+                        </p>
+                    </div>
+                </div>
+                <div class="about-section__overlay">
+                    <div class="about-section__overlay-message about-section__overlay-message_first">
+                        <p class="about-section__overlay-message-text">Защитный слой: Цинконаполненный грунт KOVALI
+                        </p>
+                        <div class="about-section__overlay-popup">
+                            <img src="./assets/img/грунт-эмаль.png" alt="Цинконаполненный грунт KOVALI 95%"
+                                class="about-section__overlay-popup-img">
+                            <h4 class="about-section__overlay-popup-heading">
+                                Цинконаполненный грунт <br> KOVALI 95%
+                            </h4>
+                            <a href="https://kovali.ru/catalog/gruntovki/po_metallu_antikorroziynye/33241/"
+                                class="btn about-section__overlay-popup-btn">
+                                Перейти в каталог
+                            </a>
+                        </div>
+                    </div>
+                    <div class="about-section__overlay-message about-section__overlay-message_second">
+                        <p class="about-section__overlay-message-text">Декоративный слой: Акриловая грунт-эмаль
+                            KOVALI
+                        </p>
+                        <div class="about-section__overlay-popup">
+                            <img src="./assets/img/грунт-эмаль.png"
+                                alt="Декоративный слой: Акриловая грунт-эмаль KOVALI"
+                                class="about-section__overlay-popup-img">
+                            <h4 class="about-section__overlay-popup-heading">
+                                Декоративный слой: Акриловая грунт-эмаль KOVALI
+                            </h4>
+                            <a href="https://kovali.ru/catalog/gruntovki/po_metallu_antikorroziynye/33241/"
+                                class="btn about-section__overlay-popup-btn">
+                                Перейти в каталог
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="owner-section">
+                <div class="wrapper owner-section__wrapper">
+                    <div class="owner-section__review">
+                        <img src="./assets/img/owner-img.png" alt="Минаков Максим Алексеевич"
+                            class="owner-section__review-img">
+                        <p class="text owner-section__review-text">
+                            С начала создания компании и по сей день мы придерживаемся одной, как мы считаем,
+                            единственно верной стратегии —
+                            <span>создание высококачественного отечественного продукта,</span> полностью адаптированного
+                            к нашему рынку и доступного по цене
+                        </p>
+                        <p class="owner-section__name">
+                            Минаков Максим Алексеевич
+                        </p>
+                        <p class="owner-section__who">
+                            Генеральный директор <br> ООО «Фабрика Ковали»
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="dev-section">
+                <div class="wrapper dev-section__wrapper">
+                    <div class="dev-section__content">
+                        <h2 class="subheading subheading_white dev-section__heading">
+                            Инструменты идеальных решений
+                        </h2>
+                        <div class="dev-section__text-content">
+                            <p>
+                                Помимо классических универсальных лакокрасочных материалов, мы предоставляем уникальные
+                                покрытия адаптированные под
+                                любые специфические запросы.
+                                <br>
+                                <br>
+                                После детального изучения условий покраски, специфики окрашиваемых объектов и условий их
+                                эксплуатации команда технологов
+                                разрабатывает химический состав полностью удовлетворяющий все задачи клиента
+                            </p>
+                        </div>
+                    </div>
+                    <ul class="dev-section__list">
+                        <li class="dev-section__list-item">
+                            <h5 class="dev-section__list-item-heading">
+                                Скорость высыхания
+                            </h5>
+                            <p class="dev-section__list-item-hidden-text">
+                                Стойкость покрытия к маслам, солям и щелочам
+                            </p>
+                            <img src="./assets/img/грунт-эмаль.png" alt="" class="dev-section__list-item-img">
+                        </li>
+                        <li class="dev-section__list-item">
+                            <h5 class="dev-section__list-item-heading">
+                                Скорость высыхания
+                            </h5>
+                            <p class="dev-section__list-item-hidden-text">
+                                Стойкость покрытия к маслам, солям и щелочам
+                            </p>
+                            <img src="./assets/img/грунт-эмаль.png" alt="" class="dev-section__list-item-img">
+                        </li>
+                        <li class="dev-section__list-item">
+                            <h5 class="dev-section__list-item-heading">
+                                Скорость высыхания
+                            </h5>
+                            <p class="dev-section__list-item-hidden-text">
+                                Стойкость покрытия к маслам, солям и щелочам
+                            </p>
+                            <img src="./assets/img/грунт-эмаль.png" alt="" class="dev-section__list-item-img">
+                        </li>
+                        <li class="dev-section__list-item">
+                            <h5 class="dev-section__list-item-heading">
+                                Скорость высыхания
+                            </h5>
+                            <p class="dev-section__list-item-hidden-text">
+                                Стойкость покрытия к маслам, солям и щелочам
+                            </p>
+                            <img src="./assets/img/грунт-эмаль.png" alt="" class="dev-section__list-item-img">
+                        </li>
+                        <li class="dev-section__list-item">
+                            <h5 class="dev-section__list-item-heading">
+                                Скорость высыхания
+                            </h5>
+                            <p class="dev-section__list-item-hidden-text">
+                                Стойкость покрытия к маслам, солям и щелочам
+                            </p>
+                            <img src="./assets/img/грунт-эмаль.png" alt="" class="dev-section__list-item-img">
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="projects-section">
+                <div class="wrapper projects-section__wrapper">
+                    <div class="project-section__info">
+                        <h2 class="subheading project-section__heading">
+                            Окрашено <span>KOVALI</span>
+                        </h2>
+                        <div class="projects-section__tabs">
+                            <div class="projects-section__tab">
+                                <p class="text project-section__tab-text">
+                                    Производство грузовых и грузопассажирских подъемников
+                                </p>
+                                <p class="text projsect-section__tab-subtext">
+                                    Г. Тула
+                                </p>
+                            </div>
+                            <div class="projects-section__tab">
+                                <p class="text project-section__tab-text">
+                                    Производство горно-шахтного оборудывания. Грейферы, скипы, копровые шкивы.
+                                </p>
+                                <p class="text projsect-section__tab-subtext">
+                                    Г. Тула
+                                </p>
+                            </div>
+                            <div class="projects-section__tab">
+                                <p class="text project-section__tab-text">
+                                    Сеть бизнес-центров «Соты»
+                                </p>
+                                <p class="text projsect-section__tab-subtext">
+                                    Г. Санкт-Петербург
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper project-section__swiper">
+                        
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        const aboutMessageEls = document.querySelectorAll('.about-section__overlay-message')
+
+
+        aboutMessageEls.forEach(m => {
+            m.addEventListener('mouseenter', () => {
+                aboutMessageEls.forEach(m => m.classList.add('hidden'))
+                m.classList.remove('hidden')
+            })
+            m.addEventListener('mouseleave', () => {
+                aboutMessageEls.forEach(m => m.classList.remove('hidden'))
+            })
+        })
+    </script>
 </body>
 
 </html>
