--- a/index.html
+++ b/index.html
@@ -290,47 +290,213 @@
             </section>
             <section class="projects-section">
                 <div class="wrapper projects-section__wrapper">
-                    <div class="project-section__info">
-                        <h2 class="subheading project-section__heading">
+                    <div class="projects-section__info">
+                        <h2 class="subheading projects-section__heading">
                             Окрашено <span>KOVALI</span>
                         </h2>
                         <div class="projects-section__tabs">
-                            <div class="projects-section__tab">
-                                <p class="text project-section__tab-text">
+                            <div class="projects-section__tab active">
+                                <p class="text projects-section__tab-text">
                                     Производство грузовых и грузопассажирских подъемников
                                 </p>
-                                <p class="text projsect-section__tab-subtext">
+                                <p class="text projects-section__tab-subtext">
                                     Г. Тула
                                 </p>
                             </div>
                             <div class="projects-section__tab">
-                                <p class="text project-section__tab-text">
+                                <p class="text projects-section__tab-text">
                                     Производство горно-шахтного оборудывания. Грейферы, скипы, копровые шкивы.
                                 </p>
-                                <p class="text projsect-section__tab-subtext">
+                                <p class="text projects-section__tab-subtext">
                                     Г. Тула
                                 </p>
                             </div>
                             <div class="projects-section__tab">
-                                <p class="text project-section__tab-text">
+                                <p class="text projects-section__tab-text">
                                     Сеть бизнес-центров «Соты»
                                 </p>
-                                <p class="text projsect-section__tab-subtext">
+                                <p class="text projects-section__tab-subtext">
                                     Г. Санкт-Петербург
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="swiper project-section__swiper">
-                        
+                    <div class="swiper projects-section__swiper">
+                        <div class="projects-section__swiper-navigation">
+                            <button type="button"
+                                class="projects-section__swiper-nav-btn projects-section__swiper-nav-btn_left">
+                                <svg width="16" height="28" viewBox="0 0 16 28" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M13.625 2.74902L2.375 13.999L13.625 25.249" stroke="white"
+                                        stroke-width="3.75" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </button>
+                            <button type="button"
+                                class="projects-section__swiper-nav-btn projects-section__swiper-nav-btn_right">
+                                <svg width="16" height="28" viewBox="0 0 16 28" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M2.375 2.74902L13.625 13.999L2.375 25.249" stroke="white"
+                                        stroke-width="3.75" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </button>
+                        </div>
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide projects-section__swiper-slide">
+                                <img src="./assets/img/slide-img1.jpg" alt="Окрашено KOVALI"
+                                    class="projects-section__swiper-slide-img">
+                            </div>
+                            <div class="swiper-slide projects-section__swiper-slide">
+                                <img src="./assets/img/slide-img2.jpg" alt="Окрашено KOVALI"
+                                    class="projects-section__swiper-slide-img">
+                            </div>
+                            <div class="swiper-slide projects-section__swiper-slide">
+                                <img src="./assets/img/slide-img1.jpg" alt="Окрашено KOVALI"
+                                    class="projects-section__swiper-slide-img">
+                            </div>
+                        </div>
+                        <div class="swiper-pagination projects-section__swiper-pagination"></div>
                     </div>
                 </div>
             </section>
+            <section class="contacts-section">
+                <div class="wrapper contacts-section__wrapper">
+                    <div class="contacts-section__info">
+                        <div class="contacts-section__info-header">
+                            <div class="contacts-section__info-item contacts-section__info-item_large">
+                                <h6 class="contacts-section__info-item-heading">
+                                    Главный офис
+                                </h6>
+                                <p class="contacts-section__info-address">
+                                    г. Тула, ул. Луначарского, дом 25
+                                </p>
+                            </div>
+                        </div>
+                        <div class="contacts-section__info-body">
+                            <div class="contacts-section__info-item">
+                                <h6 class="contacts-section__info-item-heading">
+                                    Справочная служба
+                                </h6>
+                                <a href="tel:+78005002682" class="text contacts-section__info-item-link">
+                                    8 800 500-26-82
+                                </a>
+                            </div>
+                            <div class="contacts-section__info-item">
+                                <h6 class="contacts-section__info-item-heading">
+                                    Email
+                                </h6>
+                                <a href="mailto:info@kovali.ru"
+                                    class="text contacts-section__info-text contacts-section__info-item-link">
+                                    info@kovali.ru
+                                </a>
+                            </div>
+                            <div class="contacts-section__info-item">
+                                <h6 class="contacts-section__info-item-heading">
+                                    Режим работы
+                                </h6>
+                                <div class="contacts-section__info-text-content">
+                                    <p class="contacts-section__info-text">
+                                        Пн – Пт: 08:30 — 17:30
+                                    </p>
+                                    <p class="contacts-section__info-text">
+                                        Сб – Вс: Выходные
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="contacts-section__info-item">
+                                <h6 class="contacts-section__info-item-heading">
+                                    Социальные сети
+                                </h6>
+                                <div class="contacts-section__socials">
+                                    <a href="#" class="contacts-section__socials-link">
+                                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M20.9388 26.9131C13.2719 26.9131 8.90038 21.6673 8.72104 12.9243H12.5769C12.7002 19.3358 15.5249 22.0484 17.7667 22.6088V12.9243H21.3872V18.4503C23.5954 18.2149 25.9268 15.6929 26.7115 12.9131H30.3208C30.0265 14.3521 29.4386 15.7149 28.5938 16.9164C27.7491 18.1179 26.6657 19.1323 25.4112 19.8963C26.8111 20.593 28.0475 21.5787 29.0386 22.7882C30.0298 23.9977 30.7533 25.4035 31.1614 26.9131H27.1822C26.3304 24.2566 24.2007 22.1941 21.3872 21.9139V26.9131H20.95H20.9388Z"
+                                                fill="#222222" />
+                                        </svg>
+
+                                    </a>
+                                    <a href="#" class="contacts-section__socials-link">
+                                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M10.4931 18.749C16.3235 16.2088 20.2113 14.5341 22.1566 13.725C27.7108 11.4148 28.8649 11.0135 29.6172 11.0001C29.7826 10.9974 30.1525 11.0384 30.3922 11.2328C30.5945 11.397 30.6502 11.6188 30.6768 11.7744C30.7034 11.9301 30.7366 12.2847 30.7102 12.5617C30.4093 15.7242 29.1069 23.3986 28.4444 26.9406C28.164 28.4394 27.612 28.9419 27.0775 28.9911C25.9161 29.098 25.0342 28.2235 23.9093 27.4861C22.149 26.3323 21.1546 25.614 19.446 24.488C17.4713 23.1868 18.7514 22.4716 19.8767 21.3028C20.1712 20.9969 25.2885 16.3423 25.3876 15.9201C25.4 15.8673 25.4115 15.6705 25.2945 15.5665C25.1776 15.4626 25.005 15.4981 24.8804 15.5264C24.7039 15.5665 21.8919 17.4251 16.4443 21.1023C15.6462 21.6504 14.9232 21.9174 14.2754 21.9035C13.5613 21.888 12.1877 21.4997 11.1665 21.1678C9.91404 20.7606 8.91858 20.5454 9.00526 19.8539C9.05041 19.4938 9.54637 19.1255 10.4931 18.749Z"
+                                                fill="#222222" />
+                                        </svg>
+
+                                    </a>
+                                    <a href="#" class="contacts-section__socials-link">
+                                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M9 31L10.5502 25.351C9.59249 23.6939 9.08946 21.814 9.09177 19.901C9.0943 13.8901 13.9953 9 20.0178 9C22.9404 9.00148 25.6836 10.1366 27.7466 12.1972C29.8097 14.2578 30.9448 16.9968 30.9438 19.9097C30.9411 25.9202 26.0394 30.8112 20.0177 30.8112H20.0129C18.1845 30.8104 16.3878 30.3526 14.792 29.4841L9 31Z"
+                                                fill="#222222" />
+                                            <path
+                                                d="M20.0222 10.8413C15.013 10.8413 10.9393 14.9058 10.9375 19.9015C10.935 21.6075 11.4163 23.2792 12.3258 24.7236L12.5418 25.0664L11.6243 28.4098L15.0614 27.5103L15.3933 27.7065C16.7872 28.5322 18.3855 28.9688 20.0154 28.9697H20.0188C25.0241 28.9697 29.0978 24.9049 29.0998 19.9088C29.1035 18.718 28.8706 17.5383 28.4145 16.4379C27.9584 15.3376 27.2881 14.3385 26.4424 13.4985C25.6015 12.6539 24.601 11.9841 23.499 11.528C22.3969 11.0719 21.2152 10.8385 20.0222 10.8413Z"
+                                                fill="#222222" />
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M17.2873 15.3438C17.0827 14.8901 16.8673 14.8809 16.673 14.8731L16.1497 14.8667C15.9676 14.8667 15.6718 14.9349 15.4217 15.2076C15.1717 15.4803 14.4662 16.1394 14.4662 17.48C14.4662 18.8206 15.4445 20.1159 15.5808 20.2979C15.7171 20.4799 17.4693 23.3186 20.2443 24.4108C22.5503 25.3185 23.0195 25.1379 23.5203 25.0926C24.021 25.0472 25.1355 24.4335 25.3628 23.7972C25.5902 23.1609 25.5903 22.6158 25.5222 22.5018C25.454 22.3879 25.2719 22.3201 24.9987 22.1838C24.7255 22.0474 23.3835 21.3883 23.1333 21.2973C22.8831 21.2063 22.7012 21.1611 22.519 21.4338C22.3368 21.7065 21.8142 22.32 21.6549 22.5018C21.4955 22.6837 21.3365 22.7065 21.0633 22.5703C20.79 22.4341 19.9109 22.1463 18.8679 21.218C18.0564 20.4958 17.5085 19.6039 17.3491 19.3313C17.1896 19.0587 17.3321 18.9111 17.469 18.7753C17.5916 18.6532 17.742 18.4571 17.8788 18.2981C18.0155 18.1391 18.0605 18.0254 18.1514 17.8438C18.2423 17.6623 18.197 17.5028 18.1287 17.3666C18.0604 17.2304 17.5299 15.8828 17.2873 15.3439"
+                                                fill="white" />
+                                        </svg>
+
+                                    </a>
+                                    <a href="#" class="contacts-section__socials-link">
+                                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M21.7357 21.7357C20.3214 23.195 20.2186 25.0143 20.0964 29C23.8121 29 26.3771 28.9871 27.7014 27.7014C28.9871 26.3771 29 23.69 29 20.0964C25.0143 20.225 23.195 20.3214 21.7357 21.7357ZM11 20.0964C11 23.69 11.0129 26.3771 12.2986 27.7014C13.6229 28.9871 16.1878 29 19.9036 29C19.775 25.0143 19.6786 23.195 18.2643 21.7357C16.805 20.3214 14.9857 20.2186 11 20.0964ZM19.9036 11C16.1943 11 13.6229 11.0129 12.2986 12.2986C11.0129 13.6229 11 16.31 11 19.9036C14.9857 19.775 16.805 19.6786 18.2643 18.2643C19.6786 16.805 19.7814 14.9857 19.9036 11ZM21.7357 18.2643C20.3214 16.805 20.2186 14.9857 20.0964 11C23.8121 11 26.3771 11.0129 27.7014 12.2986C28.9871 13.6229 29 16.31 29 19.9036C25.0143 19.775 23.195 19.6786 21.7357 18.2643Z"
+                                                fill="#222222" />
+                                            <path
+                                                d="M29 20.0964V19.9036C25.0143 19.775 23.195 19.6786 21.7357 18.2643C20.3214 16.805 20.2186 14.9857 20.0964 11H19.9036C19.775 14.9857 19.6786 16.805 18.2643 18.2643C16.805 19.6786 14.9857 19.7814 11 19.9036V20.0964C14.9857 20.225 16.805 20.3214 18.2643 21.7357C19.6786 23.195 19.7814 25.0143 19.9036 29H20.0964C20.225 25.0143 20.3214 23.195 21.7357 21.7357C23.195 20.3214 25.0143 20.2186 29 20.0964Z"
+                                                fill="white" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="contacts-section__info-footer">
+                            <div class="contacts-section__profile">
+                                <img src="./assets/img/profile-avatar.jpg" alt="
+Директор отдела продаж | Андреев Андрей Андреевич" class="contacts-section__profile-avatar">
+                                <div class="contacts-section__profile-body">
+                                    <p class="contacts-section__profile-heading">
+                                        Директор отдела продаж
+                                    </p>
+                                    <div class="contacts-section__profile-text-content">
+                                        <p class="contacts-section__profile-text">
+                                            Андреев Андрей Андреевич
+                                        </p>
+                                        <a href="tel:+79999991212" class="contacts-section__profile-link">
+                                            +7 999 999-12-12
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <iframe class="contacts-section__map"
+                        src="https://yandex.ru/map-widget/v1/?um=constructor%3A21892ddb8aa5471bf403f80e068ed27ab45283c2ccba5e497fb1632a9cfde833&amp;source=constructor"
+                        width="100%" height="591" frameborder="0"></iframe>
+                </div>
+            </section>
         </main>
+        <footer class="footer">
+            <div class="wrapper footer__wrapper">
+                <p class="footer__text footer__copyrights">
+                    KOVALI, 2023
+                </p>
+                <a href="#" class="footer__text footer__policy-link">
+                    Политика Конфиденциальности
+                </a>
+            </div>
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
-        const aboutMessageEls = document.querySelectorAll('.about-section__overlay-message')
+        const aboutMessageEls = document.querySelectorAll('.about-section__overlay-message');
+
+        const tabsWrapperEl = document.querySelector('.projects-section__tabs')
+        const tabEls = tabsWrapperEl.querySelectorAll('.projects-section__tab')
 
 
         aboutMessageEls.forEach(m => {
@@ -341,6 +507,28 @@
             m.addEventListener('mouseleave', () => {
                 aboutMessageEls.forEach(m => m.classList.remove('hidden'))
             })
+        })
+
+
+
+
+        const projectSectionSwiper = new Swiper('.projects-section__swiper', {
+            slidesPerView: 1,
+            effect: 'fade',
+            navigation: {
+                prevEl: '.projects-section__swiper-nav-btn_left',
+                nextEl: '.projects-section__swiper-nav-btn_right',
+            },
+            pagination: {
+                el: '.projects-section__swiper-pagination',
+            },
+            on: {
+                slideChange: (e) => {
+                    const activeIdx = e.activeIndex;
+                    tabEls.forEach(t => t.classList.remove('active'))
+                    tabEls[activeIdx].classList.add('active')
+                }
+            }
         })
     </script>
 </body>
