add burger menu catalo-item

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -382,6 +382,20 @@
             </div>
         </footer>
     </div>
+    <script>
+        const headerBurgerBtnEl = document.querySelector('.header__burger-btn');
+        const mobileMenuEl = document.querySelector('.mobile-menu');
+
+        headerBurgerBtnEl.addEventListener('click', () => {
+            if (mobileMenuEl.classList.contains('active')) {
+                mobileMenuEl.classList.remove('active');
+                document.body.classList.remove('no-scroll')
+            } else {
+                mobileMenuEl.classList.add('active');
+                document.body.classList.add('no-scroll')
+            }
+        })
+    </script>
 </body>
 
 </html>
