added autplay on ios

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </p>
                 </div>
                 <div class="promo-section__video-wrapper">
-                    <video src="./assets/video/promo-video.mp4" autoplay muted loop
+                    <video src="./assets/video/promo-video.mp4" playsinline autoplay muted loop
                         class="promo-section__video"></video>
                 </div>
             </section>
@@ -163,7 +163,7 @@
                                     15 лет
                                 </span>
                             </h4>
-                            <video muted autoplay loop src="./assets/video/advantages-video.mp4"
+                            <video playsinline autoplay muted loop src="./assets/video/advantages-video.mp4"
                                 class="advantages-section__list-item-video">
 
                             </video>
