added date filter

--- a/articles.html
+++ b/articles.html
@@ -120,9 +120,8 @@
         <main class="main">
             <section class="articles-section">
                 <div class="wrapper articles-section__wrapper">
-                    <div class="swiper articles-section__date-filter">
-                        <div class="swiper-wrapper articles-section__swiper-wrapper">
-                        </div>
+                    <div class="articles-section__date-filter">
+                        
                     </div>
                     <ul class="articles-section__list">
                     </ul>
