add last fixes 07.02

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                         </div>
                         <div class="contacts-section__info-footer">
                             <div class="contacts-section__profile">
-                                <img src="./assets/img/profile-avatar.jpg" alt="
+                                <img src="./assets/img/avatar.png" alt="
 Директор отдела продаж | Андреев Андрей Андреевич" class="contacts-section__profile-avatar">
                                 <div class="contacts-section__profile-body">
                                     <p class="contacts-section__profile-heading">
