--- a/articles.html
+++ b/articles.html
@@ -13,6 +13,9 @@
     <div class="page">
         <div class="mobile-menu">
             <nav class="mobile-menu__nav">
+                <a href="./index.html" class="mobile-menu__nav-link">
+                    Главная
+                </a>
                 <a href="./index.html#about" class="mobile-menu__nav-link">
                     О компании
                 </a>
