--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="page">
         <div class="mobile-menu">
             <nav class="mobile-menu__nav">
-                <a href="./index.html" class="mobile-menu__nav-link">
+                <a href="./index.html" class="mobile-menu__nav-link mobile-menu__nav-link_active">
                     Главная
                 </a>
                 <a href="#about" class="mobile-menu__nav-link">
